--- a/views/match-view.html
+++ b/views/match-view.html
@@ -1,44 +1,54 @@
 <div class="col-md-12" style="margin-top:100px;">
   <div class="col-md-8 col-md-offset-2">
     <div class="row">
-      <div class="panel panel-primary">
-        <div class="panel-heading text-center" style="font-weight:700;">
-          {{singleMatch.matchName}}
-        </div>
-        <div class="panel-body">
-
-            <table class="table table-bordered table-condensed">
-              <thead>
-                <tr>
-                  <th>Team 1 (CODE)</th>
-                  <th>Score 1</th>
-                  <th>Date</th>
-                  <th>Team 2 (CODE)</th>
-                  <th>Score 2</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>{{singleMatch.matchData.team1.name}} ({{singleMatch.matchData.team1.code}})</td>
-                  <td>{{singleMatch.matchData.score1}}</td>
-                  <td>{{singleMatch.matchData.date}}</td>
-                  <td>{{singleMatch.matchData.team2.name}} ({{singleMatch.matchData.team2.code}})</td>
-                  <td>{{singleMatch.matchData.score2}}</td>
-                </tr>
-
-
-
-              </tbody>
-            </table>
+      <div ng-if="singleMatch.team1Score!=undefined || singleMatch.team2Score!=undefined">
+        <div class="panel panel-primary">
+          <div class="panel-heading text-center" style="font-weight:700;">
+            {{singleMatch.matchName}}
           </div>
-          <div class="panel-footer">
+          <div class="panel-body">
 
-              <h5 style="display:inline;"><b><i class="fa fa-trophy" aria-hidden="true"></i> Team won :</b> {{singleMatch.teamWon}} </h5> | <h5 style="display:inline;"><b>Team Lose :</b> {{singleMatch.teamLose}}</h5>
+              <table class="table table-bordered table-condensed">
+                <thead>
+                  <tr>
+                    <th>Team 1 (CODE)</th>
+                    <th>Score 1</th>
+                    <th>Date</th>
+                    <th>Team 2 (CODE)</th>
+                    <th>Score 2</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>{{singleMatch.team1Name}} ({{singleMatch.team1Code}})</td>
+                    <td>{{singleMatch.team1Score}}</td>
+                    <td>{{singleMatch.matchDate}}</td>
+                    <td>{{singleMatch.team2Name}} ({{singleMatch.team2Code}})</td>
+                    <td>{{singleMatch.team2Score}}</td>
+                  </tr>
 
-           <hr style="margin-top:0px; margin-bottom:6px;">
 
+
+                </tbody>
+              </table>
+            </div>
+            <div class="panel-footer">
+               <div ng-if="singleMatch.teamWon=='Draw Match' || singleMatch.teamLose=='Draw Match'">
+                 <h5 style="display:inline;"><b>Match Draw</b></h5>
+               </div>
+
+               <div ng-if="singleMatch.teamWon!='Draw Match' || singleMatch.teamLose!='Draw Match'">
+                 <h5 style="display:inline;"><b><i class="fa fa-trophy" aria-hidden="true"></i> Team won :</b> {{singleMatch.teamWon}} </h5> | <h5 style="display:inline;"><b>Team Lose :</b> {{singleMatch.teamLose}}</h5>
+               </div>
+             <hr style="margin-top:0px; margin-bottom:6px;">
+
+            </div>
           </div>
-        </div>
+      </div>
+      <div ng-if="singleMatch.team1Score==null || singleMatch.team2Score==null">
+        <div class="alert alert-danger" role="alert"><strong>Sorry this match has no score</strong></div>
+      </div>
+
         <br>
         <a ng-href="{{singleMatch.goBackBtn}}" class="btn btn-primary"><b><i class="fa fa-arrow-left" aria-hidden="true"></i> </b>Go back</a>
       </div>
