--- a/views/season2.html
+++ b/views/season2.html
@@ -29,11 +29,11 @@
                     </h3>
                   </div>
                     <hr>
-                    <div ng-repeat="round in myMatch2.allMatches.rounds">
+                    <div>
                       <div class="panel panel-primary">
-                        <div class="panel-heading" style="font-weight:700;">
+                      <!--  <div class="panel-heading" style="font-weight:700;">
                             {{round.name}}
-                        </div>
+                        </div>-->
                         <div class="panel-body">
                           <table class="table table-condensed">
                             <thead>
@@ -56,12 +56,12 @@
                                 <th></th>
                               </tr>
                             </thead>
-                            <tbody>
-                            <a href="#">
+                            <tbody ng-repeat="round in myMatch2.allMatches.rounds">
+
                               <tr ng-repeat="match in round.matches | filter:searchTeams | filter:searchScore1 | filter:searchScore2 | filter:searchDate">
                                 <td>{{match.team1.name}} ({{match.team1.code}})</td><td>{{match.score1}}</td><td>{{match.date}}</td><td>{{match.team2.name}} ({{match.team2.code}})</td><td>{{match.score2}}</td><td><a ng-href="#/match-view/season2/{{match.date}}/{{match.team1.code}}/{{match.team2.code}}" class="btn btn-sm btn-primary">View</a></td>
                               </tr>
-                            </a>
+
                             </tbody>
 
 
